adjust margin to fix layout on ios device

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,4 +11,5 @@ body {
   padding: 20px;
   padding-top: 60px;
   background-color: white;
+  margin: 0px;
 }
